# Multi_CLI

./: .gitignore  AISWITCH.md  CENTRAL_CONTROLLER.md  CODE_REVIEW_COMPLETE.md  CONTROLLER.md  FIXES_APPLIED.md  INTERACTIVE.md  INTERACTIVE_GUIDE.md  README.md  README_EN.md  STATUS.md  TODO.md  USAGE.md  ai.bat  aic.bat  aiswitch.bat  maai.bat  multi-ai-i.bat  multi-ai-interactive.bat  pyproject.toml  requirements.txt  run.bat  setup.py
.github/workflows/: ci.yml
src/: __init__.py  aiswitch.py  cli.py  config.json  controller.py  interactive.py  orchestrator.py  skills_registry.py  smart_cli.py  utils.py  wizard.py
src/skills/: architecture.json  bug_fix.json  code_review.json  documentation.json  performance.json  refactor.json  security_scan.json  test_generation.json  translate_en.json
tests/: __init__.py  test_cli.py  test_orchestrator.py  test_skills.py
