[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-cli"
version = "1.0.0"
description = "Run multiple AI agents (Codex, Kimi, Qwen, Gemini) in parallel"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your@email.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
]

[project.scripts]
ai = "smart_cli:main"
aic = "smart_cli:main"
ai-controller = "smart_cli:main"
multi-ai = "cli:main"
maai = "cli:main"
multi-ai-i = "interactive:main"
maai-i = "interactive:main"
aiswitch = "aiswitch:main"
ais = "aiswitch:main"

[tool.setuptools]
py-modules = ["cli", "interactive", "controller", "aiswitch", "orchestrator", "skills_registry", "smart_cli"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["config.json"]
